# Simple-Cryptograph

./: Dockerfile  LICENSE  ReadMe.md  amvera.yml  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
