[project]
name = "simple-cryptograph"
version = "0.1.0"
description = ""
authors = [
    {name = "PaulNero",email = "58290662+PaulNero@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "aiogram~=2.25.1",
    "cryptography~=36.0.0",
    "python-dotenv>=1.0.0",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
